# patum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  amalgamate.py  justfile
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
benchmarks/source/: main.cpp  matching.cpp
include/: patum.h
include/patum/: concepts.h  expect.h  features.h  match.h  match_expression.h  matcher.h  overload_set.h  pattern.h  predicate.h  reference.h  struct.h  tuple.h  type_traits.h  wildcard.h
tests/: CMakeLists.txt
tests/source/: main.cpp  test_patum.cpp
